--- a/MotoGP.ViewModels/MotoGP.ViewModels.csproj
+++ b/MotoGP.ViewModels/MotoGP.ViewModels.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rider\RiderCreateViewModel.cs" />
+    <Compile Include="Rider\RiderEditViewModel.cs" />
     <Compile Include="Rider\RiderItemViewModel.cs" />
     <Compile Include="Team\TeamCreateViewModel.cs" />
     <Compile Include="Team\TeamDetailViewModel.cs" />
