--- a/MotoGP.Service/MotoGP.Service.csproj
+++ b/MotoGP.Service/MotoGP.Service.csproj
@@ -71,9 +71,11 @@
   <ItemGroup>
     <Compile Include="Interface\IRiderService.cs" />
     <Compile Include="Interface\ITeamService.cs" />
+    <Compile Include="Interface\ITeam_RiderService.cs" />
     <Compile Include="RiderService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TeamService.cs" />
+    <Compile Include="Team_RiderService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MotoGP.Models\MotoGP.Models.csproj">
