--- a/MotoGP.Service/packages.config
+++ b/MotoGP.Service/packages.config
@@ -6,4 +6,5 @@
   <package id="DelegateDecompiler.EntityFramework" version="0.17.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="Mono.Reflection" version="1.0.0.0" targetFramework="net452" />
+  <package id="StyleCop.MSBuild" version="4.7.49.0" targetFramework="net452" developmentDependency="true" />
 </packages>
