--- a/SHA_Mvc_Lab01/packages.config
+++ b/SHA_Mvc_Lab01/packages.config
@@ -34,6 +34,7 @@
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
+  <package id="StyleCop.MSBuild" version="4.7.49.0" targetFramework="net452" developmentDependency="true" />
   <package id="Unity" version="4.0.1" targetFramework="net452" />
   <package id="Unity.Mvc" version="4.0.1" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net452" />
