--- a/SHA_Mvc_Lab01/SHA_Mvc_Lab01.csproj
+++ b/SHA_Mvc_Lab01/SHA_Mvc_Lab01.csproj
@@ -290,6 +290,7 @@
     <Content Include="Views\Rider\Create.cshtml" />
     <Content Include="Views\Rider\Edit.cshtml" />
     <Content Include="Views\Team_Rider\Create.cshtml" />
+    <Content Include="Views\Team_Rider\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MotoGP.Models\MotoGP.Models.csproj">
