--- a/.gitignore
+++ b/.gitignore
@@ -210,3 +210,36 @@ FakesAssemblies/
 GeneratedArtifacts/
 _Pvt_Extensions/
 ModelManifest.xml
+/SHA_Mvc_Lab01/App_Data/Elmah.Errors/error-2016-04-12080625Z-0d5fd16e-1792-4226-b4af-a2e6a2e2e581.xml
+/SHA_Mvc_Lab01/App_Data/Elmah.Errors/error-2016-04-12075147Z-0ba7dd2d-ad27-4a63-9e31-db0b90248f5a.xml
+/SHA_Mvc_Lab01/App_Data/Elmah.Errors/error-2016-04-12075133Z-8e2866e4-89cb-421c-aa69-0e635977ef37.xml
+/SHA_Mvc_Lab01/App_Data/Elmah.Errors/error-2016-04-12075102Z-beedb94f-d132-4d3d-a6bb-6dfe2f4a30d2.xml
+/SHA_Mvc_Lab01/App_Data/Elmah.Errors/error-2016-04-12075042Z-bcfb28b1-06c6-46f6-8f41-6d453f01060a.xml
+/SHA_Mvc_Lab01/App_Data/Elmah.Errors/error-2016-04-08052509Z-48dcf97f-62f6-4b1f-b72d-67a4657c1d66.xml
+/SHA_Mvc_Lab01/App_Data/Elmah.Errors/error-2016-04-08035625Z-13644530-9e21-487f-8198-4cbdb1ddbe68.xml
+/SHA_Mvc_Lab01/App_Data/Elmah.Errors/error-2016-03-28131342Z-d4b8a8e6-87eb-4f9a-b943-4d60cbaaa2e7.xml
+/SHA_Mvc_Lab01/App_Data/Elmah.Errors/error-2016-03-28122009Z-adc7621b-4071-42bb-8edc-c91d74cbc492.xml
+/SHA_Mvc_Lab01/App_Data/Elmah.Errors/error-2016-03-28122001Z-79dbeeb4-2361-440f-8406-56f255826d32.xml
+/SHA_Mvc_Lab01/App_Data/Elmah.Errors/error-2016-03-24154816Z-865ad7cc-f43a-429f-83ad-fbb2a8c8fbbd.xml
+/SHA_Mvc_Lab01/App_Data/Elmah.Errors/error-2016-03-24140725Z-06f97d47-d087-439d-b863-a6514b5e0938.xml
+/SHA_Mvc_Lab01/App_Data/Elmah.Errors/error-2016-03-24140508Z-17cd32de-a387-4cf6-bce2-fa78b95875b3.xml
+/SHA_Mvc_Lab01/App_Data/Elmah.Errors/error-2016-03-24134423Z-d89bef88-7966-4a94-a387-f31bb1a8dffb.xml
+/SHA_Mvc_Lab01/App_Data/Elmah.Errors/error-2016-03-24134420Z-a55615a0-25ae-42c0-8c28-dd231bb621a9.xml
+/SHA_Mvc_Lab01/App_Data/Elmah.Errors/error-2016-03-24125659Z-d34c165d-6d1c-44e8-8bbf-d9970f3f0a3e.xml
+/SHA_Mvc_Lab01/App_Data/Elmah.Errors/error-2016-03-24123257Z-46c8ac97-59e7-4fb0-bf83-c9109a261baa.xml
+/SHA_Mvc_Lab01/App_Data/Elmah.Errors/error-2016-03-24122356Z-152e4283-c02e-4c1b-a5aa-38e85fb0f3bc.xml
+/SHA_Mvc_Lab01/App_Data/Elmah.Errors/error-2016-03-24122349Z-582a9a9d-037a-4fc4-923a-8cfc473c582c.xml
+/SHA_Mvc_Lab01/App_Data/Elmah.Errors/error-2016-03-11141413Z-d4f15c2c-b5ff-4ada-ab3f-790850b4a213.xml
+/SHA_Mvc_Lab01/App_Data/Elmah.Errors/error-2016-03-11132020Z-c397655e-a3f4-4708-99a1-78636d44699a.xml
+/SHA_Mvc_Lab01/App_Data/Elmah.Errors/error-2016-03-11125237Z-3fef3576-dab3-4d83-9fe6-c895f58c4c1c.xml
+/SHA_Mvc_Lab01/App_Data/Elmah.Errors/error-2016-03-11123841Z-974fbfd5-da68-4f67-bf56-6929f9aaac4e.xml
+/SHA_Mvc_Lab01/App_Data/Elmah.Errors/error-2016-03-11123509Z-ce64d98f-dd70-4c4f-92c4-8dfdefcf370b.xml
+/SHA_Mvc_Lab01/App_Data/Elmah.Errors/error-2016-03-11122534Z-2ded42c2-60f4-449f-8a5f-d730e36f107d.xml
+/SHA_Mvc_Lab01/App_Data/Elmah.Errors/error-2016-03-11122414Z-8bc0a35f-cf56-46c5-bf17-7269d2ba3835.xml
+/SHA_Mvc_Lab01/App_Data/Elmah.Errors/error-2016-03-11115524Z-0c107c66-1aea-4717-96c7-a2c15500a9f9.xml
+/SHA_Mvc_Lab01/App_Data/Elmah.Errors/error-2016-03-11085025Z-a755b7e4-a139-44f2-beb6-f63b157666c1.xml
+/SHA_Mvc_Lab01/App_Data/Elmah.Errors/error-2016-03-11084958Z-0b1023b9-4a34-4835-8ccb-635185b0eeed.xml
+/SHA_Mvc_Lab01/App_Data/Elmah.Errors/error-2016-03-11084949Z-204af6f0-69b8-484c-85de-2e528a69b8bf.xml
+/SHA_Mvc_Lab01/App_Data/Elmah.Errors/error-2016-03-11084614Z-37131695-5256-4223-be25-3a8c31110692.xml
+/SHA_Mvc_Lab01/App_Data/Elmah.Errors/error-2016-03-11084011Z-fe4c5259-8af1-48bb-bde7-478192bfb3ba.xml
+/SHA_Mvc_Lab01/App_Data/Elmah.Errors/error-2016-03-11083938Z-5cd2a498-129a-459a-9e42-6ca9baf62c70.xml
