Add Sorting Functionality to the Index Method
相關的工作項目: #7

--- a/SHA_Mvc_Lab01/Web.config
+++ b/SHA_Mvc_Lab01/Web.config
@@ -16,7 +16,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-SHA_Mvc_Lab01-20160311111450.mdf;Initial Catalog=aspnet-SHA_Mvc_Lab01-20160311111450;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="MotoGPEntities" connectionString="metadata=res://*/MotoGP_Model.csdl|res://*/MotoGP_Model.ssdl|res://*/MotoGP_Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=MotoGP;persist security info=True;user id=lisa;password=0621;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="MotoGPEntities" connectionString="metadata=res://*/MotoGP_Model.csdl|res://*/MotoGP_Model.ssdl|res://*/MotoGP_Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=MotoGP;Integrated Security=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
