--- a/.gitignore
+++ b/.gitignore
@@ -245,3 +245,4 @@ ModelManifest.xml
 /SHA_Mvc_Lab01/App_Data/Elmah.Errors/error-2016-03-11083938Z-5cd2a498-129a-459a-9e42-6ca9baf62c70.xml
 /SHA_Mvc_Lab01/App_Data/Elmah.Errors/error-2016-04-19130138Z-72379917-91a3-41ac-a9b5-7ffb40ec550e.xml
 /SHA_Mvc_Lab01/App_Data/Elmah.Errors/error-2016-04-19124627Z-6ce3cdf5-2484-4d1e-af4a-3e6006b8a883.xml
+/SHA_Mvc_Lab01/App_Data/Elmah.Errors
