GroupBy EnumFlags Statistics
相關的工作項目: #8

--- a/MotoGP.ViewModels/MotoGP.ViewModels.csproj
+++ b/MotoGP.ViewModels/MotoGP.ViewModels.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Home\MotogpGroup.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rider\RiderCreateViewModel.cs" />
     <Compile Include="Rider\RiderEditViewModel.cs" />
