--- a/SHA_Mvc_Lab01/packages.config
+++ b/SHA_Mvc_Lab01/packages.config
@@ -33,6 +33,8 @@
   <package id="MvcEnumFlags" version="1.1.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
+  <package id="PagedList" version="1.17.0.0" targetFramework="net452" />
+  <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
   <package id="StyleCop.MSBuild" version="4.7.49.0" targetFramework="net452" developmentDependency="true" />
   <package id="Unity" version="4.0.1" targetFramework="net452" />
