--- a/SHA_Mvc_Lab01/Web.config
+++ b/SHA_Mvc_Lab01/Web.config
@@ -33,6 +33,7 @@
       <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" />
       <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" />
     </httpModules>
+    <globalization culture="auto" uiCulture="auto" enableClientBasedCulture="true" />
   </system.web>
   <system.webServer>
     <modules>
