--- a/SHA_Mvc_Lab01/packages.config
+++ b/SHA_Mvc_Lab01/packages.config
@@ -2,7 +2,9 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net452" />
   <package id="bootstrap" version="3.0.0" targetFramework="net452" />
+  <package id="ClosedXML" version="0.76.0" targetFramework="net452" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
+  <package id="DocumentFormat.OpenXml" version="2.5" targetFramework="net452" />
   <package id="elmah" version="1.2.2" targetFramework="net452" />
   <package id="elmah.corelibrary" version="1.2.2" targetFramework="net452" />
   <package id="elmah.xml" version="1.2" targetFramework="net452" />
