--- a/SHA_Mvc_Lab01/Web.config
+++ b/SHA_Mvc_Lab01/Web.config
@@ -23,6 +23,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="UploadPath" value="~/FileUpload/" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
