--- a/SHA_Mvc_Lab01/packages.config
+++ b/SHA_Mvc_Lab01/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net452" />
-  <package id="bootstrap" version="3.0.0" targetFramework="net452" />
+  <package id="bootstrap" version="3.2.0" targetFramework="net452" />
   <package id="ClosedXML" version="0.76.0" targetFramework="net452" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
   <package id="DocumentFormat.OpenXml" version="2.5" targetFramework="net452" />
@@ -9,7 +9,9 @@
   <package id="elmah.corelibrary" version="1.2.2" targetFramework="net452" />
   <package id="elmah.xml" version="1.2" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="jasny-bootstrap" version="3.1.3" targetFramework="net452" />
   <package id="jQuery" version="1.10.2" targetFramework="net452" />
+  <package id="jQuery.Form" version="3.51" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net452" />
