Team- Import data From Excel
相關的工作項目: #14

--- a/.gitignore
+++ b/.gitignore
@@ -242,8 +242,5 @@ ModelManifest.xml
 /SHA_Mvc_Lab01/App_Data/Elmah.Errors/error-2016-03-11084949Z-204af6f0-69b8-484c-85de-2e528a69b8bf.xml
 /SHA_Mvc_Lab01/App_Data/Elmah.Errors/error-2016-03-11084614Z-37131695-5256-4223-be25-3a8c31110692.xml
 /SHA_Mvc_Lab01/App_Data/Elmah.Errors/error-2016-03-11084011Z-fe4c5259-8af1-48bb-bde7-478192bfb3ba.xml
-/SHA_Mvc_Lab01/App_Data/Elmah.Errors/error-2016-03-11083938Z-5cd2a498-129a-459a-9e42-6ca9baf62c70.xml
-/SHA_Mvc_Lab01/App_Data/Elmah.Errors/error-2016-04-19130138Z-72379917-91a3-41ac-a9b5-7ffb40ec550e.xml
-/SHA_Mvc_Lab01/App_Data/Elmah.Errors/error-2016-04-19124627Z-6ce3cdf5-2484-4d1e-af4a-3e6006b8a883.xml
 /SHA_Mvc_Lab01/App_Data/Elmah.Errors
-/SHA_Mvc_Lab01/FileUpload/20160628165856838.xlsx
+/SHA_Mvc_Lab01/FileUpload
