--- a/MotoGP.Models/MotoGP.Models.csproj
+++ b/MotoGP.Models/MotoGP.Models.csproj
@@ -124,7 +124,12 @@
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\MotoGP.Resources\MotoGP.Resources.csproj">
+      <Project>{3490fa21-6b4e-455c-84e1-bb089eadc077}</Project>
+      <Name>MotoGP.Resources</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\StyleCop.MSBuild.4.7.49.0\build\StyleCop.MSBuild.Targets" Condition="Exists('..\packages\StyleCop.MSBuild.4.7.49.0\build\StyleCop.MSBuild.Targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
