自訂檔名 匯出Excel
相關的工作項目: #14

--- a/SHA_Mvc_Lab01/Web.config
+++ b/SHA_Mvc_Lab01/Web.config
@@ -13,7 +13,7 @@
       <section name="errorMail" requirePermission="false" type="Elmah.ErrorMailSectionHandler, Elmah" />
       <section name="errorFilter" requirePermission="false" type="Elmah.ErrorFilterSectionHandler, Elmah" />
     </sectionGroup>
-  </configSections>
+  <section name="routeJs" type="RouteJs.RouteJsConfigurationSection, RouteJs" /></configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-SHA_Mvc_Lab01-20160311111450.mdf;Initial Catalog=aspnet-SHA_Mvc_Lab01-20160311111450;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="MotoGPEntities" connectionString="metadata=res://*/MotoGP_Model.csdl|res://*/MotoGP_Model.ssdl|res://*/MotoGP_Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=MotoGP;Integrated Security=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
@@ -35,7 +35,9 @@
       <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" />
     </httpModules>
     <globalization culture="auto" uiCulture="auto" enableClientBasedCulture="true" />
-  </system.web>
+  <httpHandlers>
+			<add verb="GET" path="routejs.axd" type="RouteJs.RouteJsHandler, RouteJs" />
+		</httpHandlers></system.web>
   <system.webServer>
     <modules>
       <remove name="FormsAuthentication" />
@@ -44,7 +46,10 @@
       <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" preCondition="managedHandler" />
     </modules>
     <validation validateIntegratedModeConfiguration="false" />
-  </system.webServer>
+  <handlers>
+			<remove name="RouteJs" />
+			<add name="RouteJs" verb="GET" path="routejs.axd" type="RouteJs.RouteJsHandler, RouteJs" preCondition="integratedMode" />
+		</handlers></system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -138,4 +143,13 @@
       </handlers>
     </system.webServer>
   </location>
-</configuration>
+<!--
+		exposeAllRoutes: Sets whether to expose all routes to the site. 
+		If true, all routes will be exposed unless explicitly hidden using the [HideRoutesInJavaScript] 
+		attribute on the controller. If false, all routes will be hidden unless explicitly exposed 
+		using the [ExposeRoutesInJavaScript] attribute.
+
+		lowerCaseUrls: Sets whether urls should be converted to lowercase.
+		If true, urls will be converted to lowercase while preserving route value placeholders.
+		Example: "Posts/{postKey}/Edit" -> "posts/{postKey}/edit"
+	--><routeJs exposeAllRoutes="true" lowerCaseUrls="false" /></configuration>
