--- a/SHA_Mvc_Lab01/packages.config
+++ b/SHA_Mvc_Lab01/packages.config
@@ -42,9 +42,10 @@
   <package id="PagedList" version="1.17.0.0" targetFramework="net452" />
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
+  <package id="RouteJs.Mvc5" version="2.1.0" targetFramework="net452" />
   <package id="StyleCop.MSBuild" version="4.7.49.0" targetFramework="net452" developmentDependency="true" />
   <package id="Unity" version="4.0.1" targetFramework="net452" />
   <package id="Unity.Mvc" version="4.0.1" targetFramework="net452" />
-  <package id="WebActivatorEx" version="2.0" targetFramework="net452" />
+  <package id="WebActivatorEx" version="2.0.5" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
