讓使用者挑選要匯出的資料欄位
相關的工作項目: #14

--- a/SHA_Mvc_Lab01/SHA_Mvc_Lab01.csproj
+++ b/SHA_Mvc_Lab01/SHA_Mvc_Lab01.csproj
@@ -258,6 +258,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Infrastructure\CheckResult.cs" />
+    <Compile Include="Infrastructure\ExportDataHelper.cs" />
     <Compile Include="Infrastructure\ExportExcelResult.cs" />
     <Compile Include="Infrastructure\ImportDataHelper.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
