--- a/MotoGP.ViewModels/MotoGP.ViewModels.csproj
+++ b/MotoGP.ViewModels/MotoGP.ViewModels.csproj
@@ -51,6 +51,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ExportColumnAttribute.cs" />
+    <Compile Include="ExportColumnAttributeHelper.cs" />
+    <Compile Include="ExportColumnObject.cs" />
     <Compile Include="Home\MotogpGroup.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rider\RiderCreateViewModel.cs" />
@@ -61,6 +64,7 @@
     <Compile Include="Team\TeamEditViewModel.cs" />
     <Compile Include="Team\TeamItemViewModel.cs" />
     <Compile Include="Team_Rider\Team_RiderCreateViewModel.cs" />
+    <Compile Include="Team_Rider\Team_RiderExportViewModel.cs" />
     <Compile Include="Team_Rider\Team_RiderItemViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
