一條龍匯出自訂資料欄位
相關的工作項目: #14

--- a/MotoGP.ViewModels/MotoGP.ViewModels.csproj
+++ b/MotoGP.ViewModels/MotoGP.ViewModels.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rider\RiderCreateViewModel.cs" />
     <Compile Include="Rider\RiderEditViewModel.cs" />
+    <Compile Include="Rider\RiderExportViewModel.cs" />
     <Compile Include="Rider\RiderItemViewModel.cs" />
     <Compile Include="Team\TeamCreateViewModel.cs" />
     <Compile Include="Team\TeamDetailViewModel.cs" />
